--- a/frontend/core/src/main/webapp/static/partials/emSlides.html
+++ b/frontend/core/src/main/webapp/static/partials/emSlides.html
@@ -1,15 +1,17 @@
-<div class="swiper-container" em-swiper-slider="horizontal">
-  <div class="swiper-wrapper">
-    <div class="swiper-slide" inbox></div>
-    <div class="swiper-slide" my></div>
-    <div class="swiper-slide" dates></div>
-    <!-- lists -->
-    <div class="swiper-slide" em-projects></div>
-    <!-- areas -->
-    <!-- contexts -->
-    <div class="swiper-slide" tasks></div>
-    <!-- single tasks -->
+<div class="slides-container">
+  <div class="swiper-container" em-swiper-slider="horizontal">
+    <div class="swiper-wrapper">
+      <div class="swiper-slide" inbox></div>
+      <div class="swiper-slide" my></div>
+      <div class="swiper-slide" dates></div>
+      <!-- lists -->
+      <div class="swiper-slide" em-projects></div>
+      <!-- areas -->
+      <!-- contexts -->
+      <div class="swiper-slide" tasks></div>
+      <!-- single tasks -->
+    </div>
+
+    <div class="footer-container" em-footer mainlinksfilter="newItem.title"></div>
   </div>
 </div>
-
-<div class="footer-container" em-footer mainlinksfilter="newItem.title"></div>
