--- a/frontend/core/src/main/webapp/static/partials/my.html
+++ b/frontend/core/src/main/webapp/static/partials/my.html
@@ -23,6 +23,6 @@
       </div>
 
       <div error-alert-bar alertmessage="errorHandler.errorMessage"></div>
-    <div/>
+    </div>
   </div>
 </section>
