--- a/frontend/core/src/main/webapp/static/less/main.less
+++ b/frontend/core/src/main/webapp/static/less/main.less
@@ -14,7 +14,8 @@
 html {
   // There is never any full page scrolling
   height: 100%;
-  body, div[role=main], section.one-column-grid, section.two-columns-grid {
+  overflow: hidden;
+  body, div[role=main], .no-slides-container, .slides-container, section.one-column-grid, section.two-columns-grid, .column {
     height: inherit;
   }
   font-size: @default-font-size;
