--- a/frontend/core/src/main/webapp/static/partials/my.html
+++ b/frontend/core/src/main/webapp/static/partials/my.html
@@ -1,7 +1,7 @@
 <section id="my" class="one-column-grid fixed-height page">
   <div class="column">
-    <div em-main-header class="main-header-container"></div>
-    <div class="main-content-container">
+    <div em-main-header id="main-header-container" class="header-container"></div>
+    <div id="main-content-container" class="content-container">
       <div class="banner">
         <img src="static/img/em_logo.png" alt="extended mind"/>
       </div>
