--- a/frontend/core/src/main/webapp/static/less/grid.less
+++ b/frontend/core/src/main/webapp/static/less/grid.less
@@ -14,6 +14,18 @@ div[role=main] {
     position: relative;
     width:100%;
   }
+
+  .one-column-grid {
+    .fixed-top {
+      max-width: @single-column-width;
+    }
+  }
+
+  .header-container {
+    * {
+      vertical-align: middle;
+    }
+  }
 }
 
 // We want to horizontally and vertically center everything
