--- a/frontend/core/src/main/webapp/static/less/idangerous.swiper.less
+++ b/frontend/core/src/main/webapp/static/less/idangerous.swiper.less
@@ -11,17 +11,11 @@
  *
  * Licensed under GPL & MIT
  *
- */
+*/
 
 /* ===============================================================
 Basic Swiper Styles 
 ================================================================*/
-/* Specify Swiper's Size: */
-.swiper-container, .swiper-slide {
-	width: 100%;
-	height: 100%;
-}
-
 .swiper-container {
 	margin:0 auto;
 	position:relative;
@@ -71,7 +65,6 @@ Basic Swiper Styles
 	transition-timing-function: ease-out;
 	margin: 0 auto;
 }
-
 .swiper-slide {
 	float: left;
 }
@@ -80,7 +73,6 @@ Basic Swiper Styles
 .swiper-wp8-horizontal {
 	-ms-touch-action: pan-y;
 }
-
 .swiper-wp8-vertical {
 	-ms-touch-action: pan-x;
 }
@@ -94,12 +86,14 @@ sizes, pagination, etc.
 
 	/*width:200px;
 	height: 100px;*/
+	width: 100%;
+	height: 100%;
 }
 .swiper-slide {
 	/* Specify Slides's Size: */
 	
-	/*width: 100%;
-	height: 100%;*/
+	// width: 100%;
+	// height: 100%;
 }
 .swiper-slide-active {
 	/* Specific active slide styling: */
