Reorganized main slides. Renamed 'today' into 'dates'.

--- a/frontend/core/src/main/webapp/static/partials/emSlides.html
+++ b/frontend/core/src/main/webapp/static/partials/emSlides.html
@@ -2,8 +2,12 @@
   <div class="swiper-wrapper">
     <div class="swiper-slide em-scrollable-middle" inbox></div>
     <div class="swiper-slide em-scrollable-top" my></div>
+    <div class="swiper-slide em-scrollable-middle" dates></div>
+    <!-- lists -->
+    <!-- projects -->
+    <!-- areas -->
+    <!-- contexts -->
     <div class="swiper-slide em-scrollable-middle" tasks></div>
-    <div class="swiper-slide em-scrollable-middle" today></div>
   </div>
 </div>
 
