--- a/frontend/core/src/main/webapp/static/partials/emSlides.html
+++ b/frontend/core/src/main/webapp/static/partials/emSlides.html
@@ -8,6 +8,7 @@
     <!-- areas -->
     <!-- contexts -->
     <div class="swiper-slide em-scrollable-middle" tasks></div>
+    <!-- single tasks -->
   </div>
 </div>
 
