Project slides structure.

--- a/frontend/core/src/main/webapp/static/partials/emSlides.html
+++ b/frontend/core/src/main/webapp/static/partials/emSlides.html
@@ -4,7 +4,7 @@
     <div class="swiper-slide em-scrollable-top" my></div>
     <div class="swiper-slide em-scrollable-middle" dates></div>
     <!-- lists -->
-    <!-- projects -->
+    <div class="swiper-slide em-scrollable-middle" em-projects></div>
     <!-- areas -->
     <!-- contexts -->
     <div class="swiper-slide em-scrollable-middle" tasks></div>
