--- a/frontend/core/src/main/webapp/static/less/variables.less
+++ b/frontend/core/src/main/webapp/static/less/variables.less
@@ -24,7 +24,7 @@
 @feature-header-height: 60px;
 
 // Footer
-@footer-height: 60px;
+@footer-height: @vertical-grid;
 
 // Colors
 @text-gray: #c9c9ce;
