--- a/frontend/core/src/main/webapp/static/less/common.less
+++ b/frontend/core/src/main/webapp/static/less/common.less
@@ -91,6 +91,19 @@ input[type=checkbox].input-checkbox:checked + .input-text {
 
 .checkbox{background-image:url(../img/checkbox.png); }
 
+// LISTS
+
+ul {
+  list-style-type: none;
+}
+
+// BORDERS
+
+.top-bottom-borders{
+  border-top: solid 2px @text-gray;
+  border-bottom: solid 2px @text-gray;
+}
+
 // SCREEN READERS
 
 .sr-only {
@@ -151,10 +164,12 @@ input[type=checkbox].input-checkbox:checked + .input-text {
 // FOOTER
 
 .footer-container {
+  position:relative;
   height: @footer-height;
   text-align: justify;
   -ms-text-justify: distribute-all-lines;
   text-justify: distribute-all-lines;
+  z-index: 100;
 }
 
 nav#footer {
