--- a/frontend/core/src/main/webapp/static/less/common.less
+++ b/frontend/core/src/main/webapp/static/less/common.less
@@ -142,6 +142,23 @@ ul {
   margin-bottom: -@footer-height;
 }
 
+// COMMON LAYOUT TRICKS
+
+.left-of-three {
+  float:left;
+  width: 33.3%
+}
+.right-of-three {
+  float:right;
+  width: 33.3%;
+  text-align: right;
+}
+.center-of-three {
+  float: left;
+  width: 33.3%;
+  text-align: center;
+} 
+
 // HEADER
 
 .header-container {
