--- a/frontend/core/src/main/webapp/static/partials/my.html
+++ b/frontend/core/src/main/webapp/static/partials/my.html
@@ -1,4 +1,4 @@
-<section id="my" class="one-column-grid fixed-height page">
+<section id="my" class="one-column-grid page">
   <div class="column">
     <div em-main-header id="main-header-container" class="header-container"></div>
     <div id="main-content-container" class="content-container">
@@ -8,17 +8,12 @@
 
       <div class="row em-omnibar swiper-no-swiping" omni-bar></div>
 
-      <div items-list itemsfilter="newItem.title">
-        <h3><a class="text-muted" id="inbox" href ng-click="gotoInbox()">inbox</a></h3>
-      </div>
+      <div class="filtered-items" filtered-items-list="items" items-filter="newItem.title"></div>
 
-      <div class="filtered-items" filtered-notes-list notesfilter="newItem.title">
-        <h3><a class="text-muted" href ng-click="gotoNotes()">notes</a></h3>
-      </div>
+      <div class="filtered-items" filtered-tasks-list="tasks" tasks-filter="newItem.title"></div>
 
-      <div class="filtered-items" ng-show="newItem.title" filtered-tasks-list="tasks" tasks-filter="newItem.title">
-        <h3><a class="text-muted" href ng-click="gotoTasks()">tasks</a></h3>
-      </div>
+      <div class="filtered-items" filtered-notes-list="notes" notes-filter="newItem.title"></div>
+
 
       <div error-alert-bar alertmessage="errorHandler.errorMessage"></div>
     </div>
