--- a/frontend/core/src/main/webapp/static/partials/templates/notes/filteredNotesList.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/notes/filteredNotesList.html
@@ -1,15 +1,8 @@
-<div>
-  <div ng-show="notesListFilter" ng-transclude></div>
-
-  <ul class="list-unstyled" ng-show="notesListFilter">
-
-    <li ng-class="selected" ng-repeat="note in notes | filter:{title:notesListFilter}">
-
-      <span ng-click="toggleNoteContent()">{{note.title}}</span>
-
-      <div note-content ng-show="showNoteContent"></div>
-
+<div ng-show="notesListFilter && filteredNotes.length">
+  <h3><a class="text-muted" href ng-click="gotoNotes()">notes</a></h3>
+  <ul class="list-unstyled">
+    <li ng-class="selected" ng-repeat="note in filteredNotes = (notes | filter:{title:notesListFilter})">
+      <div note></div>
     </li>
-
   </ul>
 </div>
