Removed common collective from list and removed collectives altogether if the user does not have them or has only common collective

--- a/frontend/core/src/main/webapp/static/partials/my.html
+++ b/frontend/core/src/main/webapp/static/partials/my.html
@@ -1,6 +1,6 @@
 <section id="my" class="one-column-grid page">
   <div class="column">
-    <div em-main-header id="main-header-container" class="header-container"></div>
+    <div main-header id="main-header-container" class="header-container"></div>
     <div id="main-content-container" class="content-container">
       <div class="banner">
         <img src="static/img/em_logo.png" alt="extended mind"/>
@@ -13,7 +13,6 @@
       <div class="filtered-items" filtered-tasks-list="tasks" tasks-filter="newItem.title"></div>
 
       <div class="filtered-items" filtered-notes-list="notes" notes-filter="newItem.title"></div>
-
 
       <div error-alert-bar alertmessage="errorHandler.errorMessage"></div>
     </div>
