--- a/frontend/core/src/main/webapp/static/partials/templates/mainHeader.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/mainHeader.html
@@ -10,10 +10,11 @@
       <li>
         <a href="#/my" ng-click="setActiveUuid(user)">home</a>
       </li>
-      <li>
+      <li ng-show="useCollectives()">
         <span>collectives</span>
         <ul>
           <li ng-repeat="(key, value) in collectives">
+            <div ng-if="value[2] === false">
             <div>
               <a ng-click="setActiveUuid(key, true)">{{value[0]}}</a>
             </div>
