--- a/frontend/core/src/main/webapp/static/less/variables.less
+++ b/frontend/core/src/main/webapp/static/less/variables.less
@@ -31,6 +31,10 @@
 @inactive-button: @text-gray;
 @active-button: #0f82fe;
 @pressed-button: #00baff;
+@link-color: #0f82fe;
+
+// Components
+@plus-button-width: 27px;
 
 /*
 @page-padding: 15px;
