--- a/frontend/core/src/main/webapp/static/partials/my.html
+++ b/frontend/core/src/main/webapp/static/partials/my.html
@@ -6,7 +6,7 @@
         <img src="static/img/em_logo.png" alt="extended mind"/>
       </div>
 
-      <div class="row em-omnibar swiper-no-swiping" omni-bar></div>
+      <div class="swiper-no-swiping" omni-bar></div>
 
       <div class="filtered-items" filtered-items-list="items" items-filter="newItem.title"></div>
 
