--- a/frontend/core/src/main/webapp/static/partials/templates/mainHeader.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/mainHeader.html
@@ -16,7 +16,7 @@
           <li ng-repeat="(key, value) in collectives">
             <div ng-if="value[2] === false">
             <div>
-              <a ng-click="setActiveUuid(key, true)">{{value[0]}}</a>
+              <a href ng-click="setActiveUuid(key, true)">{{value[0]}}</a>
             </div>
           </li>
         </ul>
