--- a/frontend/core/src/main/webapp/static/partials/templates/omniBar.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/omniBar.html
@@ -2,11 +2,15 @@
 
   <div class="form-group">
 
-    <label class="sr-only" for="omniItem">omniItem</label>
-    <input type="search" class="simple-input form-control" id="omniItem" ng-model="newItem.title" placeholder="store / recall" required>
-    <button class="plus" type="button" ng-disabled="!newItem.title" ng-click="addNewItem(newItem)">
-      +
-    </button>
+    <div id="omni-input-wrapper">
+      <label class="sr-only" for="omniItem">omniItem</label>
+      <input type="search" class="simple-input form-control" id="omniItem" ng-model="newItem.title" placeholder="store / recall" required>
+    </div>
+    <div id="plus-wrapper">
+      <button class="plus" type="button" ng-disabled="!newItem.title" ng-click="addNewItem(newItem)">
+        +
+      </button>
+    </div>
   </div>
 
 </form>
