--- a/frontend/core/src/main/webapp/static/partials/emSlides.html
+++ b/frontend/core/src/main/webapp/static/partials/emSlides.html
@@ -3,11 +3,10 @@
     <div class="swiper-slide em-scrollable-middle" inbox></div>
     <div class="swiper-slide em-scrollable-top" my></div>
     <div class="swiper-slide em-scrollable-middle" dates></div>
-    <!-- lists -->
-    <div class="swiper-slide em-scrollable-middle" em-projects></div>
+    <div class="swiper-slide em-scrollable-middle" projects></div>
+    <div class="swiper-slide em-scrollable-middle" tasks></div>
     <!-- areas -->
     <!-- contexts -->
-    <div class="swiper-slide em-scrollable-middle" tasks></div>
     <!-- single tasks -->
   </div>
 </div>
