--- a/frontend/core/src/main/webapp/static/partials/templates/tasks/projectSlide.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/tasks/projectSlide.html
@@ -1,3 +1,5 @@
 <div>
-  <span>{{project.title}}</span>  
+  <h2 ng-click="toggleProjectContent()">{{project.title}}</h2>
+  <div project-content="project" ng-show="showProjectContent"></div>
+  <div tasks-list="tasks" tasks-filter="filter" subtask="subtask"></div>
 </div>
