Two column layout work

--- a/frontend/core/src/main/webapp/static/less/common.less
+++ b/frontend/core/src/main/webapp/static/less/common.less
@@ -132,6 +132,11 @@ ul {
   top: 0; left: 0; bottom: 0; right: 0;
 }
 
+.center-horizontally {
+  margin-left: auto;
+  margin-right: auto;
+}
+
 // SWIPER
 
 .swiper-container, .swiper-wrapper, .swiper-slide, .no-swiper-container {
