--- a/frontend/core/src/main/webapp/static/less/pages.less
+++ b/frontend/core/src/main/webapp/static/less/pages.less
@@ -51,7 +51,7 @@ section#my {
       .top-bottom-borders;
     }
     nav#main-header {
-      max-width: @single-column-width;
+      max-width: @one-column-grid-width;
       text-align: right;
       margin-right: auto;
       margin-left: auto;
