--- a/frontend/core/src/main/webapp/static/less/variables.less
+++ b/frontend/core/src/main/webapp/static/less/variables.less
@@ -7,9 +7,10 @@
 @default-font-size: 18px; 
 
 // Columns
-@single-column-width: 480px;
-@two-column-main-width: 66.66%;
-@two-column-aside-width: 33.33%;
+@one-column-grid-width: 480px;
+@two-column-grid-width: 720px;
+@two-column-grid-main-width: 66.66%;
+@two-column-grid-aside-width: 33.33%;
 
 // iPad specifies the maximum width and height of the content area
 @maximum-width: 1025px;
