Nicer front page layout

--- a/frontend/core/src/main/webapp/static/less/grid.less
+++ b/frontend/core/src/main/webapp/static/less/grid.less
@@ -78,6 +78,9 @@ div[role=main] {
   .apply-padding;
   .center-horizontally;
   max-width: @two-column-grid-width;
+  li {
+    text-align: center;
+  }
 }
 
 nav#footer {
