Two dimensional swiper navigation.

--- a/frontend/core/src/main/webapp/static/partials/my/tasks.html
+++ b/frontend/core/src/main/webapp/static/partials/my/tasks.html
@@ -6,8 +6,8 @@
   <div>
     <h3>projects</h3>
     <ul class="list-unstyled">
-      <li ng-class="selected" ng-repeat="task in tasks | tasksFilter:filterService.activeFilters.project">
-        <span><a class="text-muted" href="#/{{prefix}}/tasks/projects/{{task.uuid}}">{{task.title}}</a></span>
+      <li ng-class="selected" ng-repeat="project in tasks | tasksFilter:filterService.activeFilters.project">
+        <div project-title></div>
       </li>
     </ul>
   </div>
