Added possibility to scroll to specific element

--- a/frontend/core/src/main/webapp/static/less/main.less
+++ b/frontend/core/src/main/webapp/static/less/main.less
@@ -15,9 +15,11 @@ html {
   // There is never any full page scrolling
   height: 100%;
   overflow: hidden;
+  -webkit-overflow-scrolling: touch;
   body, div[role=main], .no-slides-container, .slides-container, section.one-column-grid, section.two-columns-grid, .column {
     height: inherit;
     overflow: hidden;
+    -webkit-overflow-scrolling: touch;
   }
   font-size: @default-font-size;
 }
