--- a/frontend/core/src/main/webapp/static/partials/login.html
+++ b/frontend/core/src/main/webapp/static/partials/login.html
@@ -5,16 +5,17 @@
         <img src="static/img/em_logo_with_text.png" alt="extended mind"/>
       </div>
       <div class="content">
-        <form role="form" name="loginForm">
-          <div class="form-group">
+        <div error-alert-bar alertmessage="errorHandler.errorMessage"></div>
+        <form role="form" id="login-form" name="loginForm">
+          <div id="email" class="form-group">
             <label for="input-email" class="sr-only">email</label>
-            <input type="email" class="simple-input" id="input-email" ng-model="user.username" placeholder="enter email..." autofocus="autofocus" required />
+            <input type="email" class="simple-input" id="input-email" ng-model="user.username" placeholder="enter email..." required />
           </div>
-          <div class="form-group">
+          <div id="password" class="form-group">
             <label for="input-password" class="sr-only">password</label>
             <input type="password" class="form-control simple-input" id="input-password" ng-model="user.password" placeholder="enter password..." required />
           </div>
-          <div class="form-group">        
+          <div class="form-group">
             <input class="input-checkbox" type="checkbox" name="checkbox" id="remember" ng-model="user.remember" checked="checked" />
             <label class="input-text checkbox" id="remember" for="remember">remember</label>
           </div>
@@ -24,7 +25,6 @@
             </button>
           </div>
         </form>
-        <div error-alert-bar alertmessage="errorHandler.errorMessage"></div>
       </div>
     </div>
   </section>
