--- a/frontend/core/src/main/webapp/static/partials/my/inbox.html
+++ b/frontend/core/src/main/webapp/static/partials/my/inbox.html
@@ -1,8 +1,8 @@
 
 <section id="inbox" class="two-column-grid page">
   <div class="column">
-    <div id="feature-header-container" class="header-container" em-feature-header></div>
-    <div id="feature-content-container" class="content-container">
+    <div id="inbox-feature-header-container" class="header-container feature-header-container" em-feature-header></div>
+    <div id="inbox-feature-content-container" class="content-container feature-content-container">
       <ul class="list-unstyled">
         <li ng-class="selected" ng-repeat="item in items">
           <div item></div>
