Refactored my->home

--- a/frontend/core/src/main/webapp/static/partials/home.html
+++ b/frontend/core/src/main/webapp/static/partials/home.html
@@ -1,4 +1,4 @@
-<section id="my" class="one-column-grid page">
+<section id="home" class="one-column-grid page">
   <div class="column">
     <div main-header id="main-header-container" class="header-container"></div>
     <div id="main-content-container" class="content-container">
