--- a/frontend/core/src/main/webapp/static/less/pages.less
+++ b/frontend/core/src/main/webapp/static/less/pages.less
@@ -41,9 +41,9 @@ section#login {
   }
 }
 
-// FRONT PAGE
+// HOME
 
-section#my {
+section#home {
   #main-header-container {
     min-height: @main-header-height;
     #menu-content {
@@ -115,5 +115,5 @@ section#my {
 // INBOX
 
 section#inbox {
-  
+
 }
