--- a/frontend/core/src/main/webapp/static/partials/emSlides.html
+++ b/frontend/core/src/main/webapp/static/partials/emSlides.html
@@ -2,7 +2,7 @@
   <div class="swiper-container" em-swiper-slider="horizontal">
     <div class="swiper-wrapper">
       <div class="swiper-slide" inbox></div>
-      <div class="swiper-slide" my></div>
+      <div class="swiper-slide" home></div>
       <div class="swiper-slide" dates></div>
       <div class="swiper-slide" projects></div>
       <div class="swiper-slide" tasks></div>
